// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row should render 1`] = `
<Fragment>
  <DeleteConfirmDialog
    alertText="This questionnaire including all sections and questions will be deleted."
    data-test="delete-questionnaire"
    icon="icon-questionnaire.svg"
    isOpen={false}
    onClose={[Function]}
    onDelete={[Function]}
  />
  <FadeTransition
    enter={false}
    exit={true}
    in={false}
    onDeleteQuestionnaire={[MockFunction]}
    onDuplicateQuestionnaire={[MockFunction]}
    timeout={250}
  >
    <Row__TR
      disabled={false}
      innerRef={
        Object {
          "current": null,
        }
      }
    >
      <Row__TD
        textAlign="left"
      >
        <TruncatedQuestionnaireLink
          data-test="anchor-questionnaire-title"
          disabled={false}
          questionnaire={
            Object {
              "createdAt": "2017/01/02",
              "createdBy": Object {
                "name": "Alan",
              },
              "displayName": "Foo",
              "id": "1",
              "sections": Array [
                Object {
                  "id": "1",
                  "pages": Array [
                    Object {
                      "id": "1",
                    },
                  ],
                },
              ],
            }
          }
          title="Foo"
        >
          Foo
        </TruncatedQuestionnaireLink>
      </Row__TD>
      <Row__TD
        textAlign="left"
      >
        <FormattedDate
          date="2017/01/02"
        />
      </Row__TD>
      <Row__TD
        textAlign="left"
      >
        <Truncated>
          Alan
        </Truncated>
      </Row__TD>
      <Row__TD
        textAlign="center"
      >
        <Row__ButtonGroup>
          <DuplicateButton
            data-test="btn-duplicate-questionnaire"
            disabled={false}
            hideText={false}
            onClick={[Function]}
          />
          <IconButtonDelete
            data-test="btn-delete-questionnaire"
            disabled={false}
            hideText={true}
            iconText="Delete"
            onClick={[Function]}
          />
        </Row__ButtonGroup>
      </Row__TD>
    </Row__TR>
  </FadeTransition>
</Fragment>
`;

exports[`Row should render as disabled when the id is a duplicate 1`] = `
<Fragment>
  <DeleteConfirmDialog
    alertText="This questionnaire including all sections and questions will be deleted."
    data-test="delete-questionnaire"
    icon="icon-questionnaire.svg"
    isOpen={false}
    onClose={[Function]}
    onDelete={[Function]}
  />
  <FadeTransition
    enter={true}
    exit={false}
    in={false}
    onDeleteQuestionnaire={[MockFunction]}
    onDuplicateQuestionnaire={[MockFunction]}
    timeout={250}
  >
    <Row__TR
      disabled={true}
      innerRef={
        Object {
          "current": null,
        }
      }
    >
      <Row__TD
        textAlign="left"
      >
        <TruncatedQuestionnaireLink
          data-test="anchor-questionnaire-title"
          disabled={true}
          questionnaire={
            Object {
              "createdAt": "2017/01/02",
              "createdBy": Object {
                "name": "Alan",
              },
              "displayName": "Foo",
              "id": "dupe-2",
              "sections": Array [
                Object {
                  "id": "1",
                  "pages": Array [
                    Object {
                      "id": "1",
                    },
                  ],
                },
              ],
            }
          }
          title="Foo"
        >
          Foo
        </TruncatedQuestionnaireLink>
      </Row__TD>
      <Row__TD
        textAlign="left"
      >
        <FormattedDate
          date="2017/01/02"
        />
      </Row__TD>
      <Row__TD
        textAlign="left"
      >
        <Truncated>
          Alan
        </Truncated>
      </Row__TD>
      <Row__TD
        textAlign="center"
      >
        <Row__ButtonGroup>
          <DuplicateButton
            data-test="btn-duplicate-questionnaire"
            disabled={true}
            hideText={false}
            onClick={[Function]}
          />
          <IconButtonDelete
            data-test="btn-delete-questionnaire"
            disabled={true}
            hideText={true}
            iconText="Delete"
            onClick={[Function]}
          />
        </Row__ButtonGroup>
      </Row__TD>
    </Row__TR>
  </FadeTransition>
</Fragment>
`;
